# actix_demo

./: Cargo.toml  README.md
public/: user.html
src/: controller.rs  main.rs  middleware.rs
src/controller/: config.rs  error.rs  error_handling.rs  forms.rs  home.rs  json.rs  path.rs  query.rs  state.rs
src/controller/tests/: res.rs
src/middleware/: index.rs  logger.rs
