[package]
name = "hello_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"]}
openssl = { version = "0.10"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
actix-files = "0.6"
derive_more = "0.99" 
env_logger = "0.8"
log = "0.4"